# jarvis-personal-assistant

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  capabilities.yaml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/marketplace/: catalog.json
apps/desktop/src-tauri/src/: db.rs  env_local.rs  lib.rs  main.rs  models.rs
apps/desktop/src-tauri/src/agents/: automation.rs  builder.rs  command.rs  finance.rs  integrations.rs  memory_agent.rs  mod.rs  ocr_watch.rs  research.rs  supervisor.rs  vision.rs  writer.rs
apps/desktop/src-tauri/src/builder/: checks.rs  mod.rs  planner.rs  sandbox.rs
apps/desktop/src-tauri/src/commands/: automation.rs  clipboard.rs  desktop.rs  files.rs  mod.rs  planner.rs  terminal.rs  trigger_recipes.rs  vision.rs  wave15.rs  wave16.rs  wave17.rs
apps/desktop/src-tauri/src/db/: automation_store.rs  mod.rs
apps/desktop/src-tauri/src/gateway/: ambient.rs  anomaly.rs  approval.rs  audit.rs  bus.rs  calendar_replan.rs  capabilities.rs  channels.rs  config.rs  council_runtime.rs  discord.rs  evals.rs  heartbeat.rs  labs.rs  local_turn_api.rs  marketplace.rs  mcp.rs  mcp_host.rs  mcp_presets.rs  metrics.rs  mod.rs  models.rs  orchestrator.rs  policy.rs  profiles.rs  schedule_runner.rs  skills.rs  skills_executor.rs  state.rs  sync.rs  sync_remote.rs  task_loop.rs  task_run.rs  telegram.rs  tools.rs  trigger_dispatcher.rs  trigger_queue.rs  trigger_recipes.rs  types.rs  verifier.rs
apps/desktop/src-tauri/src/gateway/router/: l0.rs  l0_5.rs  l1.rs  l1_5.rs  l2.rs  l3.rs  mod.rs
apps/desktop/src-tauri/src/gateway/runtime/: headless.rs  headless_api.rs  mod.rs
apps/desktop/src-tauri/src/integrations/: mod.rs  notion.rs  slack.rs
apps/desktop/src-tauri/src/integrations/google/: auth.rs  calendar.rs  client.rs  gmail.rs  mod.rs
apps/desktop/src-tauri/src/memory/: brief.rs  cag.rs  controls.rs  day_plan_store.rs  embed.rs  entity_store.rs  expense.rs  knowledge_router.rs  meeting.rs  mod.rs  package.rs  people.rs  planner.rs  recall.rs  schema.rs  school.rs  topic_graph.rs  travel.rs  travel_copilot.rs  triples.rs  vault.rs  world_model.rs
apps/desktop/src-tauri/src/migrations/: mod.rs
apps/desktop/src-tauri/src/providers/: escalation.rs  groq_stt.rs  mod.rs  openai_compat.rs  presets.rs  quota.rs  redaction.rs
apps/desktop/src-tauri/src/tools/: mod.rs  uia.rs
apps/desktop/src-tauri/src/training/: eval_gate.rs  mod.rs  training_export.rs
docs/: ARCHITECTURE_WAVE12.md  ARCHITECTURE_WAVE13.md  ARCHITECTURE_WAVE15.md  ARCHITECTURE_WAVE16.md  ARCHITECTURE_WAVE17.md  ARCHITECTURE_WAVE18.md  ARCHITECTURE_WAVE19.md  ARCHITECTURE_WAVE2.md  ARCHITECTURE_WAVE3.md  ARCHITECTURE_WAVE4.md  ARCHITECTURE_WAVE5.md  ARCHITECTURE_WAVE6.md  ARCHITECTURE_WAVE7.md  E2E_RUNBOOK.md  HEADLESS_API.md  LAB_GRADUATION_LOG.md  ROADMAP.md  (+13 more)
services/jarvis-sync/: Cargo.toml  Dockerfile  docker-compose.yml
services/jarvis-sync/src/: lib.rs  main.rs
services/jarvis-sync/tests/: integration_test.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  models.rs
(+322 files in other folders)
