[package]
name = "jarvis-sync"
version = "0.1.0"
edition = "2021"

[lib]
name = "jarvis_sync"
path = "src/lib.rs"

[[bin]]
name = "jarvis-sync"
path = "src/main.rs"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
